post-infos alignment fix

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -167,7 +167,7 @@
   .post-infos {
     display: flex;
     flex: 0 0 auto;
-    align-items: baseline;
+    align-items: center;
   }
 }
 
